--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 				<h1>Curso intensivo y pasional de tipografía</h1>
 				<h2 class="contenido-h2">Aprende el proceso completo de diseñar una tipografía en un palacio del siglo XVI durante una semana intensiva con Damià Rotger y Pedro Arilla.</h2>
 				<h3 class="contenido-h3">Próxima edición: 17–23 julio 2023</h3>
+				<a class="btn btn-primary btn-lg" style="width:100%;" href="#inscripcion">Ver precio e inscripción</a>
 			</div>
 		</section>
 		<section class="que-es"><a name="que-es"></a>
@@ -142,6 +143,7 @@
 					<div class="column col-6 col-sm-12 plus20">
 						<img src="./img/especimen8.png" title="Adriana Pérez, 2018" class="img-responsive">
 					</div>
+					<a class="btn btn-primary btn-lg" style="width:100%;" href="#inscripcion">Ver precio e inscripción</a>
 			  </div>
 			</div>
 		</section>
@@ -262,7 +264,8 @@
                 </div>
               </div>
 							<div class="panel-footer">
-								<a class="btn btn-primary btn-lg disabled" style="width:100%;">PRE-INSCRIBIRSE</a>
+								<!--Añadir "disabled" al class del link para cerrar inscripciones -->
+								 <a class="btn btn-primary btn-lg" style="width:100%;" href="mailto:hola@gliglifo.com?subject=Pre-inscripción REGULAR&body=Hola, quiero inscribirme a Glíglifo 2023 con matrícula Regular. Gracias. :)">PRE-INSCRIBIRSE</a>
 							</div>
             </div>
           </div>
@@ -324,14 +327,15 @@
                 </div>
               </div>
 							<div class="panel-footer">
-								<a class="btn btn-primary btn-lg disabled" style="width:100%;">PRE-INSCRIBIRSE</a>
+								 <!--Añadir "disabled" al class del link para cerrar inscripciones -->
+								 <a class="btn btn-primary btn-lg" style="width:100%;" href="mailto:hola@gliglifo.com?subject=Pre-inscripción BOLD&body=Hola, quiero inscribirme a Glíglifo 2023 con matrícula Bold. Gracias. :)">PRE-INSCRIBIRSE</a>
 							</div>
             </div>
           </div>
 				</div>
 				<div class="toast plus20">
-					<b>Inscripción:</b> abierta próximamente.<br>
-					<b>Plazas:</b> quedan 25 (de 25).
+					<b>Inscripción:</b> abierta para la edición 2023.<br>
+					<b>Plazas:</b> quedan 23 (de 25).
 				</div>
 				<div class="toast toast-warning plus20" style="color:black; background-color:white; border-color:#dadee4;">
 					<u>Nota 1:</u> <b>La pre-inscripción no es vinculante ni significa la inscripción directa.</b> Cuando recibamos tu solicitud te indicaremos cómo formalizar el pago y completar la inscripción.<br>
