--- a/index.html
+++ b/index.html
@@ -103,6 +103,8 @@
 				<p><b>Lugar:</b> Sos del Rey Católico (Zaragoza, España). [<a href="#lugar" title="Lugar">+</a>]</p>
 				<p><b>Fecha:</b> Próxima edición 17-23 julio 2023</p>
 				<p><b>Plazas:</b> Inscripción limitada a 25 personas.</p>
+			</div>
+			<div class="container grid-sm">
 				<a class="btn btn-primary btn-lg" style="width:100%;" href="#inscripcion">Ver precio e inscripción</a>
 			</div>
 		</section>
@@ -143,7 +145,9 @@
 					<div class="column col-6 col-sm-12 plus20">
 						<img src="./img/especimen8.png" title="Adriana Pérez, 2018" class="img-responsive">
 					</div>
-					<a class="btn btn-primary btn-lg" style="width:100%;" href="#inscripcion">Ver precio e inscripción</a>
+			  </div>
+			  <div class="container grid-sm">
+			  	<a class="btn btn-primary btn-lg" style="width:100%;" href="#inscripcion">Ver precio e inscripción</a>
 			  </div>
 			</div>
 		</section>
