--- a/index.html
+++ b/index.html
@@ -69,10 +69,12 @@
 			</div>
 		</header>
 		<section class="intro" id="curso-intro">
-			<div class="container grid-sm">
+			<div class="container grid-sm plus40">
 				<h1>Curso intensivo y pasional de tipografía</h1>
 				<h2 class="contenido-h2">Aprende el proceso completo de diseñar una tipografía en un palacio del siglo XVI durante una semana intensiva con Damià Rotger y Pedro Arilla.</h2>
 				<h3 class="contenido-h3">Próxima edición: 17–23 julio 2023</h3>
+			</div>
+			<div class="container grid-sm">
 				<a class="btn btn-primary btn-lg" style="width:100%;" href="#inscripcion">Ver precio e inscripción</a>
 			</div>
 		</section>
@@ -119,7 +121,7 @@
 				</ul>
 				<p><b>Algunos ejemplos de proyectos realizados:</b></p>
 			</div>
-			<div class="container grid-lg">
+			<div class="container grid-lg plus40">
 			  <div class="columns">
 					<div class="column col-6 col-sm-12 plus20">
 						<img src="./img/especimen1.png" title="Noemí Fabregat, 2018" class="img-responsive">
@@ -146,9 +148,9 @@
 						<img src="./img/especimen8.png" title="Adriana Pérez, 2018" class="img-responsive">
 					</div>
 			  </div>
-			  <div class="container grid-sm">
-			  	<a class="btn btn-primary btn-lg" style="width:100%;" href="#inscripcion">Ver precio e inscripción</a>
-			  </div>
+			</div>
+			<div class="container grid-sm">
+			  <a class="btn btn-primary btn-lg" style="width:100%;" href="#inscripcion">Ver precio e inscripción</a>
 			</div>
 		</section>
 		<section class="pros"><a name="profesores"></a>
