--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 				<p><b>Profesores:</b> Damià Rotger y Pedro Arilla. [<a href="#profesores" title="Profesores">+</a>]</p>
 				<p><b>Lugar:</b> Sos del Rey Católico (Zaragoza, España). [<a href="#lugar" title="Lugar">+</a>]</p>
 				<p><b>Fecha:</b> Próxima edición 17-23 julio 2023</p>
-				<p><b>Plazas:</b> Inscripción limitada a 25 personas.</p>
+				<p><b>Plazas:</b> Inscripción limitada a <del>25</del> 30 personas.</p>
 			</div>
 			<div class="container grid-sm">
 				<a class="btn btn-primary btn-lg" style="width:100%;" href="#inscripcion">Ver precio e inscripción</a>
@@ -341,7 +341,7 @@
 				</div>
 				<div class="toast plus20">
 					<b>Inscripción:</b> abierta para la edición 2023.<br>
-					<b>Plazas:</b> quedan 1 (de 25).
+					<b>Plazas:</b> quedan 2 (de <del>25</del> 30).
 				</div>
 				<div class="toast toast-warning plus20" style="color:black; background-color:white; border-color:#dadee4;">
 					<u>Nota 1:</u> <b>La pre-inscripción no es vinculante ni significa la inscripción directa.</b> Cuando recibamos tu solicitud te indicaremos cómo formalizar el pago y completar la inscripción.<br>
