--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
 				</div>
 				<div class="toast plus20">
 					<b>Inscripción:</b> abierta para la edición 2023.<br>
-					<b>Plazas:</b> quedan 2 (de <del>25</del> 30).
+					<b>Plazas:</b> queda 1 (de <del>25</del> 30).
 				</div>
 				<div class="toast toast-warning plus20" style="color:black; background-color:white; border-color:#dadee4;">
 					<u>Nota 1:</u> <b>La pre-inscripción no es vinculante ni significa la inscripción directa.</b> Cuando recibamos tu solicitud te indicaremos cómo formalizar el pago y completar la inscripción.<br>
