--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
               </div>
 							<div class="panel-footer">
 								<!--Añadir "disabled" al class del link para cerrar inscripciones -->
-								 <a class="btn btn-primary btn-lg" style="width:100%;" href="mailto:hola@gliglifo.com?subject=Pre-inscripción REGULAR&body=Hola, quiero inscribirme a Glíglifo 2023 con matrícula Regular. Gracias. :)">PRE-INSCRIBIRSE</a>
+								 <a class="btn btn-primary btn-lg disabled" style="width:100%;" href="mailto:hola@gliglifo.com?subject=Pre-inscripción REGULAR&body=Hola, quiero inscribirme a Glíglifo 2023 con matrícula Regular. Gracias. :)">PRE-INSCRIBIRSE</a>
 							</div>
             </div>
           </div>
@@ -334,14 +334,14 @@
               </div>
 							<div class="panel-footer">
 								 <!--Añadir "disabled" al class del link para cerrar inscripciones -->
-								 <a class="btn btn-primary btn-lg" style="width:100%;" href="mailto:hola@gliglifo.com?subject=Pre-inscripción BOLD&body=Hola, quiero inscribirme a Glíglifo 2023 con matrícula Bold. Gracias. :)">PRE-INSCRIBIRSE</a>
+								 <a class="btn btn-primary btn-lg disabled" style="width:100%;" href="mailto:hola@gliglifo.com?subject=Pre-inscripción BOLD&body=Hola, quiero inscribirme a Glíglifo 2023 con matrícula Bold. Gracias. :)">PRE-INSCRIBIRSE</a>
 							</div>
             </div>
           </div>
 				</div>
 				<div class="toast plus20">
-					<b>Inscripción:</b> abierta para la edición 2023.<br>
-					<b>Plazas:</b> queda 1 (de <del>25</del> 30).
+					<b>Inscripción:</b> cerrada para la edición 2023.<br>
+					<b>Plazas:</b> quedan 0 (de <del>25</del> 30).
 				</div>
 				<div class="toast toast-warning plus20" style="color:black; background-color:white; border-color:#dadee4;">
 					<u>Nota 1:</u> <b>La pre-inscripción no es vinculante ni significa la inscripción directa.</b> Cuando recibamos tu solicitud te indicaremos cómo formalizar el pago y completar la inscripción.<br>
