--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 			  </section>
 				<section class="navbar-section navbar-section-links">
 				    <span class="bold">Curso</span>
-						<a href="./mini" title="Ir a Mini Glíglifo">Mini</a>
+						<!-- <a href="./mini" title="Ir a Mini Glíglifo">Mini</a> -->
 						<a href="./info" title="Ir a Más información">Info</a>
 			  </section>
 			</div>
@@ -72,7 +72,7 @@
 			<div class="container grid-sm plus20">
 				<h1>Curso intensivo y pasional de tipografía</h1>
 				<h2 class="contenido-h2">Aprende el proceso completo de diseñar una tipografía en un palacio del siglo XVI durante una semana intensiva con Damià Rotger y Pedro Arilla.</h2>
-				<h3 class="contenido-h3">Próxima edición: 17–23 julio 2023</h3>
+				<h3 class="contenido-h3">Próxima edición: 15–21 julio 2024</h3>
 			</div>
 			<div class="container grid-sm">
 				<a class="btn btn-primary btn-lg" style="width:100%;" href="#inscripcion">Ver precio e inscripción</a>
@@ -103,8 +103,9 @@
 			<div class="container grid-sm">
 				<p><b>Profesores:</b> Damià Rotger y Pedro Arilla. [<a href="#profesores" title="Profesores">+</a>]</p>
 				<p><b>Lugar:</b> Sos del Rey Católico (Zaragoza, España). [<a href="#lugar" title="Lugar">+</a>]</p>
-				<p><b>Fecha:</b> Próxima edición 17-23 julio 2023</p>
-				<p><b>Plazas:</b> Inscripción limitada a <del>25</del> 30 personas.</p>
+				<p><b>Fecha:</b> Próxima edición 15-21 julio 2024</p>
+				<p><b>Plazas:</b> Inscripción limitada a 25 personas.
+				<!-- <p><b>Plazas:</b> Inscripción limitada a <del>25</del> 30 personas.</p> -->
 			</div>
 			<div class="container grid-sm">
 				<a class="btn btn-primary btn-lg" style="width:100%;" href="#inscripcion">Ver precio e inscripción</a>
@@ -116,7 +117,7 @@
 				<p>El objetivo final de este curso es que cada alumno aprenda todo el proceso de diseño de una tipografía y que como fruto de ese aprendizaje sea capaz de desarrollar, durante el transcurso de esta semana intensiva, una fuente casi completa. De esta forma, el alumno incorporará a su día a día profesional un aprendizaje más profundo sobre la letra. Las fases que seguiremos serán las siguientes:</p>
 				<ul class="programa-lista">
 					<li><b>Teoría</b>: Voz y aroma, Leyes ópticas, Espaciado.</li>
-					<li><b>Conceptualización</b>: Idea, Doble lápiz/Pincel, Bocetaje.</li>
+					<li><b>Conceptualización</b>: Idea, Proyecto, Bocetaje.</li>
 					<li><b>Desarollo</b>: Digitalización, Glyphs, OpenType.</li>
 				</ul>
 				<p><b>Algunos ejemplos de proyectos realizados:</b></p>
@@ -172,7 +173,7 @@
 				  </div>
 				  <div class="column col-9 col-xs-12" class="pros-bio">
 				    <h3 class="contenido-h3 bold">Pedro Arilla</h3>
-						<p>Pedro se graduó con Distinción en el prestigioso Typeface Design Masters de Reading (UK), ha trabajado como Creative Director en las legendarias Fontsmith (UK) y Monotype (USA), realizado proyectos para Google, Amazon, MotoGP o FC Barcelona, y diseñado tipografías en árabe, cirílico, griego o japonés. Ahora co-dirige <a href="https://arillatype.studio/" title="Arillatype.Studio®" target="_blank">Arillatype.Studio</a>.</p>
+						<p>Pedro es cofundador y Director Creativo de <a href="https://arillatype.studio/" title="Arillatype.Studio®" target="_blank">Arillatype.Studio®</a>. Ha liderado proyectos tipográficos para clientes como Google, Coca-Cola y LaLiga, y diseñado tipografías en árabe, cirílico, griego, tailandés y japonés. Publicó durante más de una década Don Serifa. Fue Director Creativo de Fontsmith (UK) y Monotype (USA).
 						<p><a href="https://arillatype.studio/" target="_blank" title="Pedro Arilla">Web</a>&ensp;/&ensp;<a href="https://www.twitter.com/arillatype" target="_blank" title="Arillatype Twitter">Twitter</a>&ensp;/&ensp;<a href="https://www.instagram.com/arillatype" target="_blank" title="Arillatype Instagram">Instagram</a></p>
 				  </div>
 				</div>
@@ -211,18 +212,20 @@
 					<p>Si quieres asistir pero tienes alguna duda, puedes contactar con nosotros mediante <a href="mailto:hola@gliglifo.com">correo electrónico</a> y te ayudaremos a resolverla.</p>
 					<p>En caso de que lo tengas todo claro, selecciona un tipo de matrícula y nosotros te indicaremos cómo formalizar y completar la inscripción.</p>
 				</div>
+			</div>
+			<div class="container grid-lg">
 				<div class="columns">
-          <div class="column col-6 col-xs-12 plus20">
+					<div class="column col-4 col-xs-12 plus20">
             <div class="panel">
               <div class="panel-header text-center">
-                <figure class="avatar avatar-lg"><img src="./img/regular.gif" alt="Matrícula Regular" style="border-radius: 0;"></figure>
-                <div class="panel-title h5 mt-10">Matrícula Regular</div>
-                <div class="panel-subtitle">Precio: 425 €</div>
+                <figure class="avatar avatar-lg"><img src="./img/matr-light.png" alt="Matrícula Light" style="border-radius: 0;"></figure>
+                <div class="panel-title h5 mt-10">Matrícula Light</div>
+                <div class="panel-subtitle">Precio: 475 €</div>
               </div>
               <div class="panel-body">
                 <div class="tile tile-centered">
                   <div class="tile-content">
-                    <div class="tile-title text-bold">Tutorización</div>
+                    <div class="tile-title text-bold">Curso completo</div>
                   </div>
                   <div class="tile-action">
                     <i class="icon icon-check text-success"></i>
@@ -271,21 +274,84 @@
               </div>
 							<div class="panel-footer">
 								<!--Añadir "disabled" al class del link para cerrar inscripciones -->
-								 <a class="btn btn-primary btn-lg disabled" style="width:100%;" href="mailto:hola@gliglifo.com?subject=Pre-inscripción REGULAR&body=Hola, quiero inscribirme a Glíglifo 2023 con matrícula Regular. Gracias. :)">PRE-INSCRIBIRSE</a>
+								 <a class="btn btn-primary btn-lg" style="width:100%;" href="mailto:hola@gliglifo.com?subject=Pre-inscripción LIGHT&body=Hola, quiero inscribirme a Glíglifo 2023 con matrícula Light. Gracias. :)">PRE-INSCRIBIRSE</a>
 							</div>
             </div>
           </div>
-					<div class="column col-6 col-xs-12 plus20">
+          <div class="column col-4 col-xs-12 plus20">
             <div class="panel">
               <div class="panel-header text-center">
-                <figure class="avatar avatar-lg"><img src="./img/bold.gif" alt="Matrícula Regular" style="border-radius: 0;"></figure>
-                <div class="panel-title h5 mt-10">Matrícula Bold</div>
+                <figure class="avatar avatar-lg"><img src="./img/matr-regular.png" alt="Matrícula Regular" style="border-radius: 0;"></figure>
+                <div class="panel-title h5 mt-10">Matrícula Regular</div>
                 <div class="panel-subtitle">Precio: 495 €</div>
               </div>
               <div class="panel-body">
                 <div class="tile tile-centered">
                   <div class="tile-content">
-                    <div class="tile-title text-bold">Tutorización</div>
+                    <div class="tile-title text-bold">Curso completo</div>
+                  </div>
+                  <div class="tile-action">
+                    <i class="icon icon-check text-success"></i>
+                  </div>
+                </div>
+								<div class="tile tile-centered">
+                  <div class="tile-content">
+                    <div class="tile-title">Transporte Zaragoza-Sos</div>
+                  </div>
+                  <div class="tile-action">
+                    <i class="icon icon-cross text-error"></i>
+                  </div>
+                </div>
+                <div class="tile tile-centered">
+                  <div class="tile-content">
+                    <div class="tile-subtitle text-bold">Desayuno</div>
+                  </div>
+                  <div class="tile-action">
+                    <i class="icon icon-check text-success"></i>
+                  </div>
+                </div>
+								<div class="tile tile-centered">
+                  <div class="tile-content">
+                    <div class="tile-title text-bold">Comida</div>
+                  </div>
+                  <div class="tile-action">
+                    <i class="icon icon-check text-success"></i>
+                  </div>
+                </div>
+								<div class="tile tile-centered">
+                  <div class="tile-content">
+                    <div class="tile-title text-bold">Cena</div>
+                  </div>
+                  <div class="tile-action">
+                    <i class="icon icon-check text-success"></i>
+                  </div>
+                </div>
+								<div class="tile tile-centered plus20">
+                  <div class="tile-content">
+                    <div class="tile-subtitle text-bold">Alojamiento</div>
+                  </div>
+                  <div class="tile-action">
+                    <i class="icon icon-check text-success"></i>
+                  </div>
+                </div>
+              </div>
+							<div class="panel-footer">
+								<!--Añadir "disabled" al class del link para cerrar inscripciones -->
+								 <a class="btn btn-primary btn-lg" style="width:100%;" href="mailto:hola@gliglifo.com?subject=Pre-inscripción REGULAR&body=Hola, quiero inscribirme a Glíglifo 2023 con matrícula Regular. Gracias. :)">PRE-INSCRIBIRSE</a>
+							</div>
+            </div>
+          </div>
+					<div class="column col-4 col-xs-12 plus20">
+            <div class="panel">
+              <div class="panel-header text-center">
+                <figure class="avatar avatar-lg"><img src="./img/matr-bold.png" alt="Matrícula Bold" style="border-radius: 0;"></figure>
+                <div class="panel-title h5 mt-10">Matrícula Bold</div>
+                <div class="panel-subtitle">Precio: 545 €</div>
+              </div>
+              <div class="panel-body">
+                <div class="tile tile-centered">
+                  <div class="tile-content">
+                    <div class="tile-title text-bold">Curso completo</div>
                   </div>
                   <div class="tile-action">
                     <i class="icon icon-check text-success"></i>
@@ -334,14 +400,17 @@
               </div>
 							<div class="panel-footer">
 								 <!--Añadir "disabled" al class del link para cerrar inscripciones -->
-								 <a class="btn btn-primary btn-lg disabled" style="width:100%;" href="mailto:hola@gliglifo.com?subject=Pre-inscripción BOLD&body=Hola, quiero inscribirme a Glíglifo 2023 con matrícula Bold. Gracias. :)">PRE-INSCRIBIRSE</a>
+								 <a class="btn btn-primary btn-lg" style="width:100%;" href="mailto:hola@gliglifo.com?subject=Pre-inscripción BOLD&body=Hola, quiero inscribirme a Glíglifo 2023 con matrícula Bold. Gracias. :)">PRE-INSCRIBIRSE</a>
 							</div>
             </div>
           </div>
 				</div>
+			</div>
+			<div class="container grid-sm">
 				<div class="toast plus20">
-					<b>Inscripción:</b> cerrada para la edición 2023.<br>
-					<b>Plazas:</b> quedan 0 (de <del>25</del> 30).
+					<b>Inscripción:</b> abierta para la edición 2024.<br>
+					<b>Plazas:</b> quedan 25 (de 25).
+					<!-- <b>Plazas:</b> quedan 25 (de <del>25</del> 30). -->
 				</div>
 				<div class="toast toast-warning plus20" style="color:black; background-color:white; border-color:#dadee4;">
 					<u>Nota 1:</u> <b>La pre-inscripción no es vinculante ni significa la inscripción directa.</b> Cuando recibamos tu solicitud te indicaremos cómo formalizar el pago y completar la inscripción.<br>
@@ -371,21 +440,22 @@
 		<section class="patrocinadores">
 			<div class="container grid-sm">
 				<h2 class="contenido-h2 underline">Patrocinadores</h2>
+			</div>
+			<div class="container grid-lg">
 				<div class="columns" style="text-align:center;">
-					<div class="column col-4 col-sm-6"><a href="https://campgrafic.com" title="Campgràfic" target="_blank"><img src="img/campgrafic.png" alt="" width="175px"></a></div>
-					<div class="column col-4 col-sm-6"><a href="https://tipo-e.com" title="Tipo e" target="_blank"><img src="img/tipoe.png" alt="" width="175px"></a></div>
-					<div class="column col-4 col-sm-6"><a href="https://www.edicionesjardindemonos.es/" title="Jardín de monos" target="_blank"><img src="img/jardindemonos.png" alt="" width="175px"></a></div>
-					<div class="column col-4 col-sm-6"><a href="https://arillatype.studio/" title="Arillatype" target="_blank"><img src="img/arillatype.png" alt="" width="175px"></a></div>
-					<div class="column col-4 col-sm-6"><a href="https://glyphsapp.com" title="Glyphs" target="_blank"><img src="img/glyphs.png" alt="" width="175px"></a></div>
-					<div class="column col-4 col-sm-6"><a href="https://ductilct.com/" title="Dúctil" target="_blank"><img src="img/ductil.png" alt="" width="175px"></a></div>
-					<div class="column col-4 col-sm-6"><a href="https://graffica.info" title="Gràffica" target="_blank"><img src="img/graffica.png" alt="" width="175px"></a></div>
-					<div class="column col-4 col-sm-6"><a href="https://www.sosdelreycatolico.com/" title="Ayuntamiento de Sos" target="_blank"><img src="img/sos.png" alt="Ayuntamiento de Sos del Rey Católico" width="175px"></a></div>
-					<div class="column col-4 col-sm-6"><a href="https://www.alberguedesos.com/" title="Albergue de Sos" target="_blank"><img src="img/albergue.png" alt="Albergue de Jueventud de Sos del Rey Católico" width="175px"></a></div>
+					<div class="column col-3 col-sm-6"><a href="https://campgrafic.com" title="Campgràfic" target="_blank"><img src="img/campgrafic.png" alt="" width="175px"></a></div>
+					<div class="column col-3 col-sm-6"><a href="https://graffica.info" title="Gràffica" target="_blank"><img src="img/graffica.png" alt="" width="175px"></a></div>
+					<div class="column col-3 col-sm-6"><a href="https://www.edicionesjardindemonos.es/" title="Jardín de monos" target="_blank"><img src="img/jardindemonos.png" alt="" width="175px"></a></div>
+					<div class="column col-3 col-sm-6"><a href="https://glyphsapp.com" title="Glyphs" target="_blank"><img src="img/glyphs.png" alt="" width="175px"></a></div>
+					<div class="column col-3 col-sm-6"><a href="https://arillatype.studio/" title="Arillatype" target="_blank"><img src="img/arillatype.png" alt="" width="175px"></a></div>
+					<div class="column col-3 col-sm-6"><a href="https://ductilct.com/" title="Dúctil" target="_blank"><img src="img/ductil.png" alt="" width="175px"></a></div>
+					<div class="column col-3 col-sm-6"><a href="https://www.sosdelreycatolico.com/" title="Ayuntamiento de Sos" target="_blank"><img src="img/sos.png" alt="Ayuntamiento de Sos del Rey Católico" width="175px"></a></div>
+					<div class="column col-3 col-sm-6"><a href="https://alberguesosdelreycatolico.es/" title="Albergue de Sos" target="_blank"><img src="img/albergue.png" alt="Albergue de Jueventud de Sos del Rey Católico" width="175px"></a></div>
 				</div>
 			</div>
 		</section>
 		<footer class="text-center footer">
-			<p>&#13025; 2014–<script>document.write(new Date().getFullYear())</script>, Damià Rotger y Pedro Arilla.</p>
+			<p>© 2014–<script>document.write(new Date().getFullYear())</script>, Damià Rotger y Pedro Arilla.</p>
 		</footer>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script src="./src/curso-inscripcion.js"></script>
