--- a/info/index.html
+++ b/info/index.html
@@ -55,7 +55,7 @@
 			  </section>
 				<section class="navbar-section navbar-section-links">
 					<a href="../" title="Ir a Curso">Curso</a>
-					<a href="../mini" title="Ir a Mini Glíglifo">Mini</a>
+					<!-- <a href="../mini" title="Ir a Mini Glíglifo">Mini</a> -->
 					<span class="bold">Info</span>
 			  </section>
 			</div>
@@ -123,7 +123,7 @@
 			<div class="container grid-sm">
 				<h2 class="contenido-h2 underline">Quiénes somos</h2>
 				<p><b>Damià Rotger</b> [<a href="https://www.facebook.com/EstudiDuctil/" title="Dúctil Facebook" target="_blank">Facebook</a> / <a href="https://twitter.com/Ductil_Grafic" title="Dúctil Twitter" target="_blank">Twitter</a> / <a href="https://www.instagram.com/ductil/" title="Dúctil Instagram" target="_blank">Instagram</a>] diseña <a href="https://ductilct.com/?tagportfolio=tipografia" title="Dúctil tipografías" target="_blank">tipografías</a> y escribe poesía. Es profesor de tipografía y diseño editorial, e imparte talleres y conferencias por todo el país. Es fundador de <a href="https://ductilct.com/" title="Dúctil" target="_blank">Dúctil</a> y la mitad de Glíglifo. Es autor de una docena de familias tipográficas y ha publicado varios libros de poesía. Ha recibido prestigiosos premios y nominaciones en ambos campos.</p>
-				<p><b>Pedro Arilla</b> [<a href="https://arillatype.studio/" target="_blank" title="Pedro Arilla">Web</a> / <a href="https://www.twitter.com/arillatype" target="_blank" title="Arillatype Twitter">Twitter</a> / <a href="https://www.instagram.com/arillatype" target="_blank" title="Arillatype Instagram">Instagram</a>] se graduó con Distinción en el prestigioso Typeface Design Masters de Reading (UK), ha trabajado como Creative Director en las legendarias Fontsmith (UK) y Monotype (USA), realizado proyectos para Google, Amazon, MotoGP o FC Barcelona, y diseñado tipografías en árabe, cirílico, griego o japonés. Ahora co-dirige <a href="https://arillatype.studio/" title="Arillatype.Studio®" target="_blank">Arillatype.Studio</a>.</p>
+				<p><b>Pedro Arilla</b> [<a href="https://arillatype.studio/" target="_blank" title="Pedro Arilla">Web</a> / <a href="https://www.twitter.com/arillatype" target="_blank" title="Arillatype Twitter">Twitter</a> / <a href="https://www.instagram.com/arillatype" target="_blank" title="Arillatype Instagram">Instagram</a>] es cofundador y Director Creativo de <a href="https://arillatype.studio/" title="Arillatype.Studio®" target="_blank">Arillatype.Studio®</a>. Ha liderado proyectos tipográficos para clientes como Google, Coca-Cola y LaLiga, y diseñado tipografías en árabe, cirílico, griego, tailandés y japonés. Publicó durante más de una década Don Serifa. Fue Director Creativo de Fontsmith (UK) y Monotype (USA).</p>
 			</div>
 			<div class="container grid-lg">
 			  <div class="columns">
@@ -138,7 +138,7 @@
 			</div>
 		</section>
 		<footer class="text-center footer">
-			<p>&#13025; 2014–<script>document.write(new Date().getFullYear())</script>, Damià Rotger y Pedro Arilla.</p>
+			<p>© 2014–<script>document.write(new Date().getFullYear())</script>, Damià Rotger y Pedro Arilla.</p>
 		</footer>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script src="../src/curso-inscripcion.js"></script>
