--- a/index.html
+++ b/index.html
@@ -220,6 +220,7 @@
               <div class="panel-header text-center">
                 <figure class="avatar avatar-lg"><img src="./img/matr-light.png" alt="Matrícula Light" style="border-radius: 0;"></figure>
                 <div class="panel-title h5 mt-10">Matrícula Light</div>
+                <div class="panel-subtitle">SIN ALOJAMIENTO</div>
                 <div class="panel-subtitle">Precio: 475 €</div>
               </div>
               <div class="panel-body">
@@ -283,6 +284,7 @@
               <div class="panel-header text-center">
                 <figure class="avatar avatar-lg"><img src="./img/matr-regular.png" alt="Matrícula Regular" style="border-radius: 0;"></figure>
                 <div class="panel-title h5 mt-10">Matrícula Regular</div>
+                <div class="panel-subtitle">SIN TRANSPORTE ZGZ-SOS</div>
                 <div class="panel-subtitle">Precio: 495 €</div>
               </div>
               <div class="panel-body">
@@ -346,6 +348,7 @@
               <div class="panel-header text-center">
                 <figure class="avatar avatar-lg"><img src="./img/matr-bold.png" alt="Matrícula Bold" style="border-radius: 0;"></figure>
                 <div class="panel-title h5 mt-10">Matrícula Bold</div>
+                <div class="panel-subtitle">TODO INCLUIDO (MÁS POPULAR)</div>
                 <div class="panel-subtitle">Precio: 545 €</div>
               </div>
               <div class="panel-body">
