--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
               <div class="panel-header text-center">
                 <figure class="avatar avatar-lg"><img src="./img/matr-bold.png" alt="Matrícula Bold" style="border-radius: 0;"></figure>
                 <div class="panel-title h5 mt-10">Matrícula Bold</div>
-                <div class="panel-subtitle">TODO INCLUIDO (MÁS POPULAR)</div>
+                <div class="panel-subtitle">TODO INCLUIDO</div>
                 <div class="panel-subtitle">Precio: 545 €</div>
               </div>
               <div class="panel-body">
