--- a/index.html
+++ b/index.html
@@ -412,8 +412,8 @@
 			<div class="container grid-sm">
 				<div class="toast plus20">
 					<b>Inscripción:</b> abierta para la edición 2024.<br>
-					<b>Plazas:</b> quedan 2 (de 25).
-					<!-- <b>Plazas:</b> quedan 25 (de <del>25</del> 30). -->
+					<!-- <b>Plazas:</b> quedan 0 (de 25). -->
+					<b>Plazas:</b> quedan 4 (de <del>25</del> 30).
 				</div>
 				<div class="toast toast-warning plus20" style="color:black; background-color:white; border-color:#dadee4;">
 					<u>Nota 1:</u> <b>La pre-inscripción no es vinculante ni significa la inscripción directa.</b> Cuando recibamos tu solicitud te indicaremos cómo formalizar el pago y completar la inscripción.<br>
