--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 			<div class="container grid-sm plus20">
 				<h1>Curso intensivo y pasional de tipografía</h1>
 				<h2 class="contenido-h2">Aprende el proceso completo de diseñar una tipografía en un palacio del siglo XVI durante una semana intensiva con Damià Rotger y Pedro Arilla.</h2>
-				<h3 class="contenido-h3">Próxima edición: 15–21 julio 2024</h3>
+				<h3 class="contenido-h3">Próxima edición: 15–21 julio 2024 (plazas agotadas)</h3>
 			</div>
 			<div class="container grid-sm">
 				<a class="btn btn-primary btn-lg" style="width:100%;" href="#inscripcion">Ver precio e inscripción</a>
@@ -411,7 +411,7 @@
 			</div>
 			<div class="container grid-sm">
 				<div class="toast plus20">
-					<b>Inscripción:</b> abierta para la edición 2024.<br>
+					<b>Inscripción:</b> cerrada para la edición 2024.<br>
 					<!-- <b>Plazas:</b> quedan 0 (de 25). -->
 					<b>Plazas:</b> quedan 0 (de <del>25</del> 30).
 				</div>
